<resources>
    <string name="app_name">Tip Time</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_20_tip">Amazing (20% tip)</string>
    <string name="good_15_tip">Good (15% tip)</string>
    <string name="meh_10_tip">Meh (10% tip)</string>
    <string name="round_the_tip">Round the tip?</string>
    <string name="calculate">Calculate</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>